--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "4.0.3",
     "recharts": "^2.0.9",
     "redux-persist": "^6.0.0",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -43,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.2"
   }
 }
